Create client manually
