# crates/inspector/src/api.rs
@@ -1,34 +1,23 @@
 use std::sync::LazyLock;
 use std::time::Duration;
 use tokio::sync::mpsc;
-use zestors_api_client::{
-    client::{self, default::parameters},
-    types,
-};
+use zestors::supervision::SupervisionTree;
+use zestors_client_api::Client;
 
-static CLIENT: LazyLock<client::Client> = LazyLock::new(|| {
-    client::Client::new("http://localhost:8080").expect("Failed to create API client")
-});
+static CLIENT: LazyLock<Client> =
+    LazyLock::new(|| Client::new("http://localhost:8080").expect("Failed to create API client"));
 
 const SLEEP_INTERVAL: Duration = Duration::from_millis(500);
 
 pub enum ApiMessage {
-    NewTree(rootcause::Result<types::SupervisionTree>),
+    NewTree(rootcause::Result<Option<SupervisionTree>>),
 }
 
 pub async fn run_tree_poller(sender: mpsc::Sender<ApiMessage>, ctx: egui::Context) {
     loop {
-        let tree = CLIENT
-            .get_tree(&parameters::GetTreeQuery {
-                include_debug: Some(true),
-                pid: None,
-            })
-            .await;
+        let tree = CLIENT.get_tree().await;
 
-        sender
-            .send(ApiMessage::NewTree(tree.map_err(Into::into)))
-            .await
-            .ok();
+        sender.send(ApiMessage::NewTree(tree)).await.ok();
 
         ctx.request_repaint();
         tokio::time::sleep(SLEEP_INTERVAL).await;
